# smart-house

./: .clangd  CMakeLists.txt  README.md  compile_commands.json
app/: CMakeLists.txt
app/device/include/: device.h
app/device/source/: device.cpp
app/devices/: CMakeLists.txt
app/devices/device/: CMakeLists.txt
app/devices/device/include/: device.h
app/devices/device/source/: device.cpp
app/devices/interfaces/: CMakeLists.txt
app/devices/interfaces/include/: measurable.h
app/devices/smart_kettle/: CMakeLists.txt
app/devices/smart_kettle/include/: smart_kettle.h
app/devices/smart_kettle/source/: smart_kettle.cpp
app/devices/smart_light/: CMakeLists.txt
app/devices/smart_light/include/: smart_light.h
app/devices/smart_light/source/: smart_light.cpp
app/devices/thermometer/: CMakeLists.txt
app/devices/thermometer/include/: thermometer.h
app/devices/thermometer/source/: thermometer.cpp
app/devices/vacuum_cleaner/: CMakeLists.txt
app/devices/vacuum_cleaner/include/: vacuum_cleaner.h
app/devices/vacuum_cleaner/source/: vacuum_cleaner.cpp
app/home/: CMakeLists.txt
app/home/include/: smart_home.h
app/home/source/: smart_home.cpp
app/interfaces/include/: activatable.h  measurable.h
app/shared/: CMakeLists.txt
app/shared/include/: activatable.h  object.h  uuid.h
app/shared/source/: object.cpp  uuid.cpp
app/speaker/: CMakeLists.txt
app/speaker/include/: speaker.h
app/speaker/source/: speaker.cpp
app/temperature_manager/: CMakeLists.txt
app/temperature_manager/include/: temperature_manager.h
app/temperature_manager/include/enum/: temperature_unit.h
app/temperature_manager/source/: temperature_manager.cpp
docs/: SmartHouse_ClassDiagram.cmapx  smart_house_uml.puml
examples/: CMakeLists.txt
examples/InheritanceExample/: CMakeLists.txt
examples/InheritanceExample/account/: CMakeLists.txt
examples/InheritanceExample/account/include/: account.hpp
examples/InheritanceExample/account_types/: CMakeLists.txt
examples/InheritanceExample/account_types/credit_account/: CMakeLists.txt
examples/InheritanceExample/account_types/credit_account/include/: credit_account.hpp
examples/InheritanceExample/account_types/credit_account/source/: credit_account.cpp
examples/InheritanceExample/account_types/debit_account/: CMakeLists.txt
examples/InheritanceExample/account_types/debit_account/include/: debit_account.hpp
examples/InheritanceExample/account_types/debit_account/source/: debit_account.cpp
examples/InheritanceExample/account_types/family_account/: CMakeLists.txt
examples/InheritanceExample/account_types/family_account/include/: family_account.hpp
examples/InheritanceExample/account_types/family_account/source/: family_account.cpp
examples/InheritanceExample/account_types/saving_account/: CMakeLists.txt
examples/InheritanceExample/account_types/saving_account/include/: saving_account.hpp
examples/InheritanceExample/account_types/saving_account/source/: saving_account.cpp
examples/InheritanceExample/bank/: CMakeLists.txt
examples/InheritanceExample/bank/include/: bank.hpp
examples/InheritanceExample/bank/source/: bank.cpp
examples/SmartHouseDemo/: CMakeLists.txt  main.cpp
include/smart_house/device/enum/: DeviceStatus.h
include/smart_house/room/enum/: RoomType.h
tests/: CMakeLists.txt  README.md  test_performance.cpp
tests/unit_tests/: CMakeLists.txt  test_device.cpp  test_smart_home.cpp  test_speaker.cpp  test_temperature_manager.cpp
tests/unit_tests/devices/: CMakeLists.txt  test_smart_kettle.cpp  test_smart_kettle_catch2.cpp  test_smart_light.cpp  test_thermometer.cpp  test_vacuum_cleaner.cpp
